--- a/src/components/FileUpload/file-upload.css
+++ b/src/components/FileUpload/file-upload.css
@@ -2,14 +2,11 @@
   --sgds-file-upload-left-icon-color: var(--sgds-success);
   --sgds-file-upload-remove-icon-color: var(--sgds-body-color-lighter);
   --sgds-file-upload-remove-icon-hover-color: ;
-
-  --sgds-file-upload-icon-gap: var(--sgds-spacer-2);
-  --sgds-file-upload-gap: var(--sgds-spacer-3);
 }
 
 .fileupload-list-item {
   display: flex;
-  gap: var(--sgds-file-upload-icon-gap);
+  gap: var(--sgds-spacer-2);
 }
 .fileupload-list-item span:not(:first-of-type) {
   cursor: pointer;
@@ -27,7 +24,7 @@
 .file-upload-label {
   display: flex;
   align-items: center;
-  gap: var(--sgds-file-upload-icon-gap);
+  gap: var(--sgds-spacer-2);
 }
 /** end scss */
 ul {
@@ -38,7 +35,7 @@ ul {
 .sgds.fileupload-list {
   display: flex;
   flex-direction: column;
-  gap: var(--sgds-file-upload-gap);
+  gap: var(--sgds-spacer-3);
   list-style-type: none;
 }
 
@@ -59,5 +56,5 @@ label {
 .fileupload-container {
   display: flex;
   flex-direction: column;
-  gap: var(--sgds-file-upload-gap);
+  gap: var(--sgds-spacer-3);
 }
