--- a/src/components/Mainnav/mainnav-item.css
+++ b/src/components/Mainnav/mainnav-item.css
@@ -7,7 +7,7 @@ li {
 a.nav-link {
   display: flex;
   cursor: pointer;
-  color: var(--sgds-mainnav-color);
+  color: var(--sgds-body-color);
   border-bottom: var(--sgds-mainnav-item-border-bottom-width) solid transparent;
   min-height: 100%;
   align-items: center;
@@ -27,5 +27,5 @@ a.nav-link {
 .nav-link.disabled {
   cursor: default;
   pointer-events: none;
-  opacity: var(--sgds-mainnav-disabled-opacity);
+  opacity: var(--sgds-disabled-opacity);
 }
