--- a/src/components/Progress/progress.css
+++ b/src/components/Progress/progress.css
@@ -1,6 +1,4 @@
 :host {
-  --sgds-progress-bg: var(--sgds-gray-200);
-  --sgds-progress-border-radius: var(--sgds-border-radius);
   --sgds-progress-height: 1rem;
   display: block;
 }
@@ -8,7 +6,7 @@
 .progress {
   display: flex;
   overflow: hidden;
-  background-color: var(--sgds-progress-bg);
-  border-radius: var(--sgds-progress-border-radius);
+  background-color: var(--sgds-gray-200);
+  border-radius: var(--sgds-border-radius);
   height: var(--sgds-progress-height);
 }
