--- a/src/themes/day.css
+++ b/src/themes/day.css
@@ -228,6 +228,7 @@
   --sgds-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   --sgds-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   --sgds-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
+  --sgds-focus-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-info-300);
   --sgds-focus-ring-width: 0.25rem;
   --sgds-focus-ring-opacity: 0.25;
   --sgds-focus-ring-color: rgba(90, 66, 192, 0.25);
