--- a/src/components/Tab/tab.css
+++ b/src/components/Tab/tab.css
@@ -1,8 +1,5 @@
 :host {
   --sgds-tab-theme-color: var(--sgds-primary);
-  --sgds-tab-color: var(--sgds-body-color);
-  --sgds-tab-bg: var(--sgds-body-bg);
-  --sgds-tab-basic-toggle-hover-color: var(--sgds-white);
   display: inline-block;
 }
 
@@ -15,7 +12,7 @@ ul {
   list-style: none;
 }
 .nav-link {
-  color: var(--sgds-tab-color);
+  color: var(--sgds-body-color);
   display: block;
   padding: 0.5rem 1rem;
   text-decoration: none;
@@ -31,7 +28,7 @@ ul {
 .nav-link.tabs-info-toggle {
   padding: 0.75rem;
   border-radius: 0.3125rem;
-  background-color: var(--sgds-tab-bg);
+  background-color: var(--sgds-body-bg);
   border: 1px solid var(--sgds-gray-400);
   min-width: 11.875rem;
 }
@@ -56,7 +53,7 @@ ul {
 .nav-link.tabs-basic-toggle {
   border: 1px solid var(--sgds-gray-400);
   border-radius: 0;
-  background-color: var(--sgds-tab-bg);
+  background-color: var(--sgds-body-bg);
   padding: 0.5rem 1.5rem;
 }
 
@@ -68,7 +65,7 @@ ul {
 
 .nav-link:not(.disabled).tabs-basic-toggle.active,
 .nav-link:not(.disabled).tabs-basic-toggle:hover {
-  color: var(--sgds-tab-basic-toggle-hover-color);
+  color: var(--sgds-white);
   background-color: var(--sgds-tab-theme-color);
 }
 
