--- a/src/components/Toast/toast-container.css
+++ b/src/components/Toast/toast-container.css
@@ -1,6 +1,5 @@
 :host {
   --sgds-toast-container-slot-elements-gap: 0.5rem;
-  --sgds-toast-container-z-index: 1090;
 }
 
 .toast-container {
@@ -8,7 +7,7 @@
   pointer-events: none;
   position: fixed;
   width: max-content;
-  z-index: var(--sgds-toast-container-z-index);
+  z-index: 1090;
 }
 
 .top-start {
