--- a/src/components/Toast/toast.css
+++ b/src/components/Toast/toast.css
@@ -1,61 +1,51 @@
 :host {
-  --sgds-toast-max-width: 500px;
-  --sgds-toast-gap: var(--sgds-spacer-2);
-  --sgds-toast-padding: var(--sgds-spacer-3);
-  --sgds-toast-bg: var(--sgds-body-bg);
-  --sgds-toast-border-width: var(--sgds-border-width);
-  --sgds-toast-border-left-width: 5px;
-  --sgds-toast-border-radius: 0 0.25rem 0.25rem 0;
-  --sgds-toast-border-color: light-dark(var(--sgds-gray-800), var(--sgds-gray-200));
-  --sgds-toast-box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.15);
-  --sgds-toast-font-size: 1rem;
-  --sgds-toast-color: var(--sgds-body-color);
-  --sgds-toast-header-gap: var(--sgds-spacer-2);
-  --sgds-toast-header-color: light-dark(var(--sgds-gray-800), var(--sgds-gray-200));
-  --sgds-toast-header-icon-color: var(--sgds-body-color);
+  --sgds-toast-icon-margin-right: var(--sgds-spacer-2);
   background-color: transparent;
 }
 
-:host([status="warning"]) {
+:host([status="warning"]) .toast{
   --sgds-toast-border-color: var(--sgds-warning-filled);
   --sgds-toast-header-color: var(--sgds-warning-text-emphasis);
   --sgds-toast-header-icon-color: var(--sgds-warning-text-emphasis);
 }
-:host([status="danger"]) {
+:host([status="danger"]) .toast{
   --sgds-toast-border-color: var(--sgds-danger-filled);
   --sgds-toast-header-color: var(--sgds-danger-text-emphasis);
   --sgds-toast-header-icon-color: var(--sgds-danger-text-emphasis);
 }
-:host([status="success"]) {
+:host([status="success"]) .toast{
   --sgds-toast-border-color: var(--sgds-success-filled);
   --sgds-toast-header-color: var(--sgds-success-text-emphasis);
   --sgds-toast-header-icon-color: var(--sgds-success-text-emphasis);
 }
-:host([status="info"]) {
+:host([status="info"]) .toast{
   --sgds-toast-border-color: var(--sgds-info-filled);
   --sgds-toast-header-color: var(--sgds-info-text-emphasis);
   --sgds-toast-header-icon-color: var(--sgds-info-text-emphasis);
 }
 
 .toast {
+  --sgds-toast-border-color: var(--sgds-gray-800);
+  --sgds-toast-header-color: light-dark(var(--sgds-gray-800), var(--sgds-gray-200));
+  --sgds-toast-header-icon-color: var(--sgds-body-color);
   display: flex;
   flex-direction: column;
-  gap: var(--sgds-toast-gap);
-  padding: var(--sgds-toast-padding);
+  gap: var(--sgds-spacer-2);
+  padding: var(--sgds-spacer-3);
   background-clip: padding-box;
-  background-color: var(--sgds-toast-bg);
-  border: var(--sgds-toast-border-width) solid var(--sgds-toast-border-color);
-  border-left: var(--sgds-toast-border-left-width) solid var(--sgds-toast-border-color);
-  border-radius: var(--sgds-toast-border-radius);
-  box-shadow: var(--sgds-toast-box-shadow);
-  font-size: var(--sgds-toast-font-size);
-  color: var(--sgds-toast-color);
+  background-color: var(--sgds-body-bg);
+  border: var(--sgds-border-width) solid var(--sgds-toast-border-color);
+  border-left: 5px solid var(--sgds-toast-border-color);
+  border-radius: 0 0.25rem 0.25rem 0;
+  box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.15);
+  font-size: var(--sgds-body-font-size);
+  color: var(--sgds-body-color);
   width: fit-content;
   max-width: 100%;
   pointer-events: auto;
   width: 100%;
   min-width: 320px;
-  max-width: var(--sgds-toast-max-width);
+  max-width: 500px;
 }
 .toast[hidden] {
   display: none;
